Fixed deployment issues

--- a/devops/deploy/docker/Makefile
+++ b/devops/deploy/docker/Makefile
@@ -4,5 +4,9 @@
 # Run the Caddy application within a Docker container
 .PHONY: docker-run
 docker-run:
-	docker-compose -f caddy/docker-compose.yml up -d --force-recreate
+docker-run:
+	cd caddy && \
+	docker-compose -f docker-compose.yml up -d --force-recreate && \
+	cd .. && \
 	docker-compose -f docker-compose.yml up -d --force-recreate
+
