--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,4 @@
+# Production dependencies
 fastapi==0.95.0 # For building the API
 fastapi-health==0.4.0 # For health check endpoint
 uvicorn==0.20.0 # For running the API
@@ -12,5 +13,8 @@ pypdf==5.0.1  # For reading PDFs
 cryptography==43.0.1  # For using the OpenAI API
 langchain_pinecone==0.1.3  # For using the Pinecone vector database
 tiktoken==0.7.0  # For using the OpenAI API
+
+# Test dependencies
 pytest==8.3.3  # For testing
 pytest-asyncio==0.24.0 # For async method testing
+pytest-cov==5.0.0 # For code coverage
