Modified router test

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,3 +18,4 @@ tiktoken==0.7.0  # For using the OpenAI API
 pytest==8.3.3  # For testing
 pytest-asyncio==0.24.0 # For async method testing
 pytest-cov==5.0.0 # For code coverage
+pytest-sugar==1.0.0  # For code coverage showing in the terminal while running tests
