--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -19,3 +19,4 @@ pytest==8.3.3  # For testing
 pytest-asyncio==0.24.0 # For async method testing
 pytest-cov==5.0.0 # For code coverage
 pytest-sugar==1.0.0  # For code coverage showing in the terminal while running tests
+allure-pytest==2.13.5  # For generating allure reports
