--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,6 +13,7 @@ pypdf==5.0.1  # For reading PDFs
 cryptography==43.0.1  # For using the OpenAI API
 langchain_pinecone==0.1.3  # For using the Pinecone vector database
 tiktoken==0.7.0  # For using the OpenAI API
+aiohttp== 3.10.8 # Async http client/server framework (asyncio)
 
 # Test dependencies
 pytest==8.3.3  # For testing
